--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "This is a simple example of a serverless API using AWS Lambda and API Gateway. The API is written in Python and uses the Serverless Framework to deploy the Lambda function and API Gateway.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "offline": "sls offline --noAuth"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "serverless-offline": "^13.3.3"
   }
 }
