--- a/.env_example
+++ b/.env_example
@@ -1,3 +1,10 @@
 PROJECT_NAME=example
 REGION=ap-northeast-2
 STAGE=dev
+
+COGNITO_USER_POOL_ID=secret
+COGNITO_USER_POOL_CLIENT_ID=secret
+COGNITO_USER_POOL_CLIENT_SECRET=secret
+COGNITO_DOMAIN_URL=secret
+
+REDIRECT_URL=http://localhost:5001/api/v1/auth/token
